--- a/index.ipynb
+++ b/index.ipynb
@@ -39,11 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08333333333333333"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P_A = 1/2\n",
+    "P_B = 1/6\n",
+    "P_AB = P_A * P_B\n",
+    "P_AB"
    ]
   },
   {
@@ -56,11 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7289999999999999"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your Solution"
+    "# Your Solution\n",
+    "9/10*9/10*9/10"
    ]
   },
   {
@@ -75,11 +102,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution "
+    "# Your solution \n",
+    "P_C = .7\n",
+    "P_CS = .35\n",
+    "P_CS/P_C"
    ]
   },
   {
@@ -99,11 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004524886877828055"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P_1 = 4/52\n",
+    "P_2_given_1 = 3/51\n",
+    "P_1 * P_2_given_1"
    ]
   },
   {
@@ -119,11 +174,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8559987631416203"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P_1 = 95/100\n",
+    "P_2_given_1 = 94/99\n",
+    "P_3_given_21 = 93/98\n",
+    "P_3_given_21 * P_2_given_1 * P_1"
    ]
   },
   {
@@ -153,11 +223,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n",
+      "0.1111111111111111\n",
+      "0.19999999999999998\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "PA = 20/36\n",
+    "PA_and_B = 4/36\n",
+    "omega = 36\n",
+    "PB_given_A = (PA_and_B)/PA\n",
+    "print(omega)\n",
+    "print(PA_and_B)\n",
+    "print(PB_given_A)"
    ]
   },
   {
@@ -188,11 +275,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n",
+      "0.5\n",
+      "0.625\n",
+      "0.375\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "PA = 0.5\n",
+    "PB = 0.4\n",
+    "PA_and_B = 0.25\n",
+    "PB_given_A = PA_and_B/PA\n",
+    "print(PB_given_A)\n",
+    "PBC_given_A = 1 - PB_given_A\n",
+    "print(PBC_given_A)\n",
+    "PA_given_B = PA_and_B/PB\n",
+    "print(PA_given_B)\n",
+    "PAC_given_B = 1 - PA_given_B\n",
+    "print(PAC_given_B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "50% probability of someone having Amex card given they already have a Visa card.\n",
+    "50% probability of not having Amex card if already have Visa card.\n",
+    "63% probability of someone having Visa card given they already have Amex card.\n",
+    "37% probability of not having Visa card if already have Amex card."
    ]
   },
   {
@@ -221,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
